--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -30,6 +30,11 @@
             </div>
         </nav>
     </header>
+    
+    <div class="text-center">
+        <h1 id="slogan">Where good neighbours become good friends</h1>
+    </div>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
