--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -22,18 +22,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                     </ul>
                 </div>
+                <a href="/signin" id="signin">Sign In</a>
             </div>
         </nav>
     </header>
     
-    <div class="text-center">
-        <h1 id="slogan">Where good neighbours become good friends</h1>
-    </div>
 
     <div class="container">
         <main role="main" class="pb-3">
