Sing In button changed

--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
                         </li>
                     </ul>
                 </div>
-                <a href="/signin" id="signin">Sign In</a>
+                <a class="nav-link text-dark" href="/signin" id="signin">Sign In</a>
+                @* <a href="/signin" id="signin">Sign In</a> *@
             </div>
         </nav>
     </header>
