Image positioned right

--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -17,15 +17,19 @@
       margin:0px auto;
     }
 
-    .form_input_fields {
-      margin-left:0; 
+    .homepage_container {
+      position: relative;
     }
+
     .password_requirements {
       color: gray;
     }
 
     .people_planting {
       width: 50%;
+      position: absolute;
+      top: 100px;
+      left: 600px;
     }
 
     .signup_container {
@@ -82,7 +86,7 @@
         @* <input type="file" name="ImageData" id="ImageData" onchange="fileCheck(this);"/>   *@
         <input type='submit' id='submit' value='Submit'/>
       </form>
-          <img class="people_planting" src="https://chopra.brightspotcdn.com/dims4/default/5ce9dc9/2147483647/strip/true/crop/693x390+61+0/resize/1200x675!/quality/90/?url=http%3A%2F%2Fchopra-brightspot.s3.amazonaws.com%2F24%2Fa8%2Ffaa072655ded01ab5619b910f567%2Fvolunteers.jpg"/>
+          <img class="people_planting" src="https://chopra.brightspotcdn.com/dims4/default/5ce9dc9/2147483647/strip/true/crop/693x390+61+0/resize/1200x675!/quality/90/?url=http%3A%2F%2Fchopra-brightspot.s3.amazonaws.com%2F24%2Fa8%2Ffaa072655ded01ab5619b910f567%2Fvolunteers.jpg" alt="people_planting"/>
     
     </div>
   </div>
