--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
       ViewData["Title"] = "Home Page";
   }
   <style>
-   
+
     label {
       display:inline-block;
       width:200px;
@@ -18,6 +18,7 @@
     }
 
     .homepage_container {
+      padding: 60px auto 60px;
       position: relative;
     }
 
@@ -26,15 +27,19 @@
     }
 
     .people_planting {
-      width: 50%;
+      width: 65%;
       position: absolute;
-      top: 100px;
-      left: 600px;
+      top: 40px;
+      left: 500px;
     }
 
     .signup_container {
       margin-left:0px;
-      margin-top:30px;
+      margin-top:100px;
+    }
+
+    .signup_title {
+      margin-bottom: 20px;
     }
 
     #slogan {
@@ -55,7 +60,7 @@
   <div class="homepage_container">
 
     <div class="signup_container"> 
-      <h3>Sign Up</h3>
+      <h5 class="signup_title">Sign Up</h5>
         <form class="signup_form" action="/users" method="post">
           <div class="form_input_fields">
             <label>Name</label>
@@ -85,8 +90,8 @@
 
         @* <input type="file" name="ImageData" id="ImageData" onchange="fileCheck(this);"/>   *@
         <input type='submit' id='submit' value='Submit'/>
-      </form>
           <img class="people_planting" src="https://chopra.brightspotcdn.com/dims4/default/5ce9dc9/2147483647/strip/true/crop/693x390+61+0/resize/1200x675!/quality/90/?url=http%3A%2F%2Fchopra-brightspot.s3.amazonaws.com%2F24%2Fa8%2Ffaa072655ded01ab5619b910f567%2Fvolunteers.jpg" alt="people_planting"/>
+      </form>
     
     </div>
   </div>
