--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 @if(ViewBag.Name != null)
                 {
-                    <div>Hello, @ViewBag.Name!</div>
+                    <div class="greet_user">Hello, @ViewBag.Name!</div>
                     <a class="nav-link text-dark" href="/signout" id="signout">Sign Out</a>
                 }
                 else
