--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
 
     .password_requirements {
       color: gray;
+      margin: 50px auto;
     }
 
     .people_planting {
@@ -35,7 +36,7 @@
 
     .signup_container {
       margin-left:0px;
-      margin-top:100px;
+      margin-top:40px;
     }
 
     .signup_title {
