a little css added

--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -1,3 +1,19 @@
+<head>
+  <style>
+.listing {
+      border: none  blueviolet;
+      border-radius: 3px;
+      box-shadow: 5px 5px 7px rgb(150
+      , 122, 168);
+      list-style-type: none;
+      margin: 0 auto 30px;
+      padding: 20px 100px;
+      position: relative;
+      text-align: center;
+    }
+  </style>
+</head>  
+
 @* <div>
   @ViewBag.Location </br></br>
   @ViewBag.Requirements 
