--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -3,8 +3,7 @@
 .listing {
       border: none  blueviolet;
       border-radius: 3px;
-      box-shadow: 5px 5px 7px rgb(150
-      , 122, 168);
+      box-shadow: 5px 5px 7px #a5d447;
       list-style-type: none;
       margin: 0 auto 30px;
       padding: 20px 100px;
@@ -25,10 +24,10 @@
     <li class="listing">
       <div>
         <p class="lister_name">@listing.User.Name</p>
-        <p class="listed_location">@listing.Location</p>
-        <p class="listed_requirements">@listing.Item_Service</p>
-        <p class="listed_description">@listing.Description</p>
-        <p class="listed_price">£@listing.Price</p>
+        <p class="listed_location">Location: @listing.Location</p>
+        <p class="listed_requirements">Item/Service: @listing.Item_Service</p>
+        <p class="listed_description">Description: @listing.Description</p>
+        <p class="listed_price">Price: £@listing.Price</p>
         <form action="" method="">
         <input type='submit' id='contact' value='Contact'/>
         </form>
