Italics on results

--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -24,10 +24,10 @@
     <li class="listing">
       <div>
         <p class="lister_name">@listing.User.Name</p>
-        <p class="listed_location">Location: @listing.Location</p>
-        <p class="listed_requirements">Item/Service: @listing.Item_Service</p>
-        <p class="listed_description">Description: @listing.Description</p>
-        <p class="listed_price">Price: £@listing.Price</p>
+        <p class="listed_location">Location: <em>@listing.Location</em></p>
+        <p class="listed_requirements">Item/Service: <em>@listing.Item_Service</em></p>
+        <p class="listed_description">Description: <em>@listing.Description</em></p>
+        <p class="listed_price">Price: <em>£@listing.Price</em></p>
         <form action="" method="">
         <input type='submit' id='contact' value='Contact'/>
         </form>
