--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -76,6 +76,10 @@
             <input type='text' id='name' name='name' placeholder='Name'/><br><br>
             <label>Email</label>
             <input type='email' id='email' name='email' placeholder='Email'/><br><br>
+            <label>Phone Number</label>
+            <input type='text' id='phonenumber' name='phonenumber' placeholder='Phone Number'/><br><br>
+            <label>Address</label>
+            <input type='text' id='address' name='address' placeholder='Address'/><br><br>
             <label>Password</label>
             <input type='password' id='password' name='password' placeholder='Password'/><br><br>
             <label>Confirm Password</label>
