Fix route to view another user profile from results

--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -29,7 +29,7 @@
         <p class="listed_description">Description: <em>@listing.Description</em></p>
         <p class="listed_price">Price: <em>£@listing.Price</em></p>
         <form action="/user-profile" method="get">
-          <input type='hidden' id='user-id' value='@listing.UserId'/>
+          <input type='hidden' id='user-id' name='user-id' value='@listing.UserId'/>
           <input type='submit' id='contact' value='Contact'/>
         </form>
       </div>
