--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -27,10 +27,10 @@
         <p class="listed_location">Location: <em>@listing.Location</em></p>
         <p class="listed_requirements">Item/Service: <em>@listing.Item_Service</em></p>
         <p class="listed_description">Description: <em>@listing.Description</em></p>
-        <p class="listed_price">Price: <em>£@listing.Price</em></p>
+        <p class="listed_price">Price: <em>@listing.Price</em></p>
         <form action="/user-profile" method="get">
           <input type='hidden' id='user-id' name='user-id' value='@listing.UserId'/>
-          <input type='submit' id='contact' value='Contact'/>
+          <input type='submit' id='contact' value='Contact @listing.User.Name, your friendly neighbour'/>
         </form>
       </div>
     </li>
