--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" href="/search" id="search" >Search</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" href="/create-listing" id="create_listing" >Create Listing</a>
+                        </li>
                     </ul>
                 </div>
                 @if(ViewBag.Name != null)
