--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -73,17 +73,17 @@
         <form class="signup_form" action="/users" method="post">
           <div class="form_input_fields">
             <label>Name</label>
-            <input type='text' id='name' name='name' placeholder='Name'/><br><br>
+            <input type='text' id='name' name='name' placeholder='Name' required/><br><br>
             <label>Email</label>
-            <input type='email' id='email' name='email' placeholder='Email'/><br><br>
+            <input type='email' id='email' name='email' placeholder='Email' required/><br><br>
             <label>Phone Number</label>
-            <input type='text' id='phonenumber' name='phonenumber' placeholder='Phone Number'/><br><br>
+            <input type='tel' id='phonenumber' name='phonenumber' placeholder='Phone Number' required/><br><br>
             <label>Address</label>
-            <input type='text' id='address' name='address' placeholder='Address'/><br><br>
+            <input type='text' id='address' name='address' placeholder='Address' required/><br><br>
             <label>Password</label>
-            <input type='password' id='password' name='password' placeholder='Password'/><br><br>
+            <input type='password' id='password' name='password' placeholder='Password' required/><br><br>
             <label>Confirm Password</label>
-            <input type='password' id='confirm-password' name='confirm-password' placeholder='Confirm Password'/><br><br>
+            <input type='password' id='confirm-password' name='confirm-password' placeholder='Confirm Password' required/><br><br>
             <input type='submit' id='submit' value='Submit'/>
           </div>
 
