--- a/NeighboursApp/Views/Listings/Search.cshtml
+++ b/NeighboursApp/Views/Listings/Search.cshtml
@@ -17,6 +17,10 @@
       margin:0px auto;
     }
 
+    .create_listing_message {
+      font-size: 22px;
+      margin-top: 100px;
+    }
     .form_input_fields {
       margin: 40px auto;
     }
@@ -80,6 +84,8 @@
       </form>
       <img class="people_planting" src="https://chopra.brightspotcdn.com/dims4/default/5ce9dc9/2147483647/strip/true/crop/693x390+61+0/resize/1200x675!/quality/90/?url=http%3A%2F%2Fchopra-brightspot.s3.amazonaws.com%2F24%2Fa8%2Ffaa072655ded01ab5619b910f567%2Fvolunteers.jpg" alt="people_planting"/>
     </div>
+
+    <p class="create_listing_message"><em>Can you help a neighbour? <a  href="/create-listing" id="create_listing" >Add a listing</a></em></p>
   </div>
 </body>
 
