--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -84,7 +84,7 @@
             <input type='password' id='password' name='password' placeholder='Password' required/><br><br>
             <label>Confirm Password</label>
             <input type='password' id='confirm-password' name='confirm-password' placeholder='Confirm Password' required/><br><br>
-            <input type='submit' id='submit' value='Submit'/>
+            <input type='submit' id='submit' value='Sign Up'/>
           </div>
 
           <div class="password_requirements">
