--- a/NeighboursApp/Views/Listings/MyProfile.cshtml
+++ b/NeighboursApp/Views/Listings/MyProfile.cshtml
@@ -67,18 +67,28 @@
   <p>Contact number: @ViewBag.User.PhoneNumber</p>
   <p>Address: @ViewBag.User.Address</p>
 
-  <h6>My Listings</h6>
-  <ul>
-  @foreach (Listing listing in ViewBag.Listings)
+  @* <p>@ViewBag.ListingsBool</p> *@
+  @* @if(ViewBag.ListingsBool == "true") *@
+  
+  @if(ViewBag.ListingsBool == "True")
   {
-    <li class="listing">
-      <div>
-        <p class="listed_location">Location: <em>@listing.Location</em></p>
-        <p class="listed_requirements">Item/Service: <em>@listing.Item_Service</em></p>
-        <p class="listed_description">Description: <em>@listing.Description</em></p>
-        <p class="listed_price">Price: <em>@listing.Price</em></p>
-      </div>
-    </li>
+    <h6>My Listings</h6> 
+    <ul>
+    @foreach (Listing listing in ViewBag.Listings)
+    {
+      <li class="listing">
+        <div>
+          <p class="listed_location">Location: <em>@listing.Location</em></p>
+          <p class="listed_requirements">Item/Service: <em>@listing.Item_Service</em></p>
+          <p class="listed_description">Description: <em>@listing.Description</em></p>
+          <p class="listed_price">Price: <em>@listing.Price</em></p>
+        </div>
+      </li>
+    }
+    </ul>
   }
-  </ul>
+  else
+  {
+    <h6 class="create_listing_message"><a  href="/create-listing" id="create_listing" >Add a listing</a></h6>
+  }
 </body>
