--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -45,6 +45,7 @@
 
     #slogan {
         margin-top: 0;
+        color: forestgreen;
         border-bottom: 0.2px groove;
         padding-top: 20px;
         padding-bottom: 34px;
@@ -52,10 +53,13 @@
     }
 
     #submit {
+      background-color: white;
+      color: forestgreen;
       border: 1px solid;
+      padding: 5px 20px;
+      text-decoration: none;
       border-radius: 8px;
       margin-left: 10px;
-      padding: 5px 20px;
 
     }
   </style>
