--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -10,6 +10,15 @@
       position: relative;
       text-align: center;
     }
+     #contact {
+      background-color: white;
+      color: forestgreen;
+      border: 1px solid;
+      padding: 5px 20px;
+      text-decoration: none;
+      border-radius: 8px;
+      margin-left: 10px;
+    }
   </style>
 </head>  
 
