--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -8,20 +8,35 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/neighbours.styles.css" asp-append-version="true" />
     <style>
+        #logo{
+        color: forestgreen;
+        }
         #my_profile {
+            background-color: white;
+            color: forestgreen;
             border: 1px solid;
+            padding: 5px 20px;
+            text-decoration: none;
             border-radius: 8px;
             margin-left: 10px;
         }
 
         #signin {
+            background-color: white;
+            color: forestgreen;
             border: 1px solid;
+            padding: 5px 20px;
+            text-decoration: none;
             border-radius: 8px;
             margin-left: 10px;
         }
 
         #signout {
+            background-color: white;
+            color: forestgreen;
             border: 1px solid;
+            padding: 5px 20px;
+            text-decoration: none;
             border-radius: 8px;
             margin-left: 10px;
         }
@@ -31,7 +46,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">neighbours</a>
+                <a class="navbar-brand" id="logo" asp-area="" asp-controller="Home" asp-action="Index">neighbours</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,12 +67,12 @@
                 @if(ViewBag.Name != null)
                 {
                     <div class="greet_user">Hello, @ViewBag.Name!</div>
-                    <a class="nav-link text-dark" href="/my-profile" id="my_profile">My Profile</a>
-                    <a class="nav-link text-dark" href="/signout" id="signout">Sign Out</a>
+                    <a href="/my-profile" id="my_profile">My Profile</a>
+                    <a href="/signout" id="signout">Sign Out</a>
                 }
                 else
                 {
-                    <a class="nav-link text-dark" href="/signin" id="signin">Sign In</a>
+                    <a href="/signin" id="signin">Sign In</a>
                 }
                 @* <a href="/signin" id="signin">Sign In</a> *@
             </div>
