--- a/NeighboursApp/Views/Listings/Search.cshtml
+++ b/NeighboursApp/Views/Listings/Search.cshtml
@@ -86,6 +86,9 @@
         </div>
         <input type='submit' id='submit' value='Submit'/>
       </form>
+      <br>
+      <h6 id="message" style="color:red">@ViewBag.Error</h6>
+      <br>
       <img class="people_planting" src="https://chopra.brightspotcdn.com/dims4/default/5ce9dc9/2147483647/strip/true/crop/693x390+61+0/resize/1200x675!/quality/90/?url=http%3A%2F%2Fchopra-brightspot.s3.amazonaws.com%2F24%2Fa8%2Ffaa072655ded01ab5619b910f567%2Fvolunteers.jpg" alt="people_planting"/>
     </div>
 
