Search - form fields more left

--- a/NeighboursApp/Views/Listings/Search.cshtml
+++ b/NeighboursApp/Views/Listings/Search.cshtml
@@ -6,7 +6,7 @@
 
     label {
       display:inline-block;
-      width:200px;
+      width:100px;
       margin-right:5px;
       text-align:right;
     }
@@ -44,6 +44,10 @@
 
     .search_title {
       margin-bottom: 20px;
+    }
+
+    #requirements {
+
     }
 
     #slogan {
