--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -19,6 +19,16 @@
       border-radius: 8px;
       margin-left: 10px;
     }
+
+    #slogan {
+    margin-top: 0;
+    color: forestgreen;
+    border-bottom: 0.2px groove;
+    padding-top: 20px;
+    padding-bottom: 34px;
+    font-style: italic;
+}
+
   </style>
 </head>  
 
