Results page - Slogan. Title.

--- a/NeighboursApp/Views/Listings/MyProfile.cshtml
+++ b/NeighboursApp/Views/Listings/MyProfile.cshtml
@@ -1,10 +1,7 @@
 <head>
-  <style>
-    h2 {
-      text-align: center;
-    }
-
+  <style> 
     h6 {
+      color: #004010;
       font-weight: bold;
     }
 
@@ -35,6 +32,7 @@
     }
 
     .profile_username {
+      color: #004010;
       text-align: left;
     }
 
