--- a/NeighboursApp/Views/Listings/UserProfile.cshtml
+++ b/NeighboursApp/Views/Listings/UserProfile.cshtml
@@ -1,10 +1,7 @@
 <head>
   <style>
-    h2 {
-      text-align: center;
-    }
-
     h6 {
+      color: #004010;
       font-weight: bold;
     }
 
@@ -36,6 +33,7 @@
     }
 
     .profile_username {
+      color: #004010;
       text-align: left;
     }
     @* .time_posted {
