--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -1,14 +1,14 @@
 <head>
   <style>
     .listing {
-      border: none  blueviolet;
+      border: none;
       border-radius: 3px;
       box-shadow: 5px 5px 7px #a5d447;
       list-style-type: none;
       margin: 0 auto 30px;
       padding: 20px 100px;
       position: relative;
-      text-align: center;
+      text-align: left;
     }
 
     .results_title {
@@ -23,7 +23,6 @@
     padding: 5px 20px;
     text-decoration: none;
     border-radius: 8px;
-    margin-left: 10px;
     }
 
     #slogan {
