--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -60,7 +60,13 @@
       text-decoration: none;
       border-radius: 8px;
       margin-left: 10px;
+      transition: all 200ms ease-in-out;       
+    }
 
+    #submit:hover {
+      background-color: #7cba00;
+      color: white;
+      cursor: pointer;
     }
   </style>
 </head>
