--- a/NeighboursApp/Views/Listings/MyProfile.cshtml
+++ b/NeighboursApp/Views/Listings/MyProfile.cshtml
@@ -31,6 +31,9 @@
       width: 350px;
     }
 
+    .profile_space_container {
+    }
+
     .profile_username {
       color: #004010;
       text-align: left;
