--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -23,6 +23,12 @@
     padding: 5px 20px;
     text-decoration: none;
     border-radius: 8px;
+    transition: all 200ms ease-in-out;       
+    }
+
+    #contact:hover {
+      background-color: #eefcd4;
+      cursor: pointer;
     }
 
     #slogan {
