--- a/NeighboursApp/Views/Listings/Search.cshtml
+++ b/NeighboursApp/Views/Listings/Search.cshtml
@@ -6,15 +6,15 @@
 
     label {
       display:inline-block;
-      width:100px;
       margin-right:5px;
       text-align:right;
+      width:100px;
     }
 
     fieldset {
       border:none;
-      width:200px;
       margin:0px auto;
+      width:200px;
     }
 
     .create_listing_message {
@@ -31,10 +31,10 @@
     }
 
     .people_planting {
-      width: 65%;
-      position: absolute;
       top: 40px;
       left: 500px;
+      position: absolute;
+      width: 65%;
     }
 
     .search_form_container {
@@ -45,10 +45,6 @@
     .search_title {
       color: #004010;
       margin-bottom: 20px;
-    }
-
-    #requirements {
-
     }
 
     #slogan {
@@ -62,13 +58,23 @@
 
     #submit {
       background-color: white;
-      color: forestgreen;
       border: 1px solid;
+      border-radius: 8px;
+      color: forestgreen;
+      margin-left: 10px;
       padding: 5px 20px;
       text-decoration: none;
-      border-radius: 8px;
-      margin-left: 10px;
+      transition: all 200ms ease-in-out;       
     }
+
+    #submit:hover {
+      background-color: #7cba00;
+      color: white;
+      cursor: pointer;
+    }
+
+
+      
 
   </style>
 </head>
