--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -8,38 +8,62 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/neighbours.styles.css" asp-append-version="true" />
     <style>
-        #logo{
-        color: forestgreen;
-        }
-        #my_profile {
-            background-color: white;
-            color: forestgreen;
-            border: 1px solid;
-            padding: 5px 20px;
-            text-decoration: none;
-            border-radius: 8px;
-            margin-left: 10px;
-        }
 
-        #signin {
-            background-color: white;
-            color: forestgreen;
-            border: 1px solid;
-            padding: 5px 20px;
-            text-decoration: none;
-            border-radius: 8px;
-            margin-left: 10px;
-        }
+      #logo{
+      color: forestgreen;
+      }
 
-        #signout {
-            background-color: white;
-            color: forestgreen;
-            border: 1px solid;
-            padding: 5px 20px;
-            text-decoration: none;
-            border-radius: 8px;
-            margin-left: 10px;
-        }
+      #my_profile {
+          background-color: white;
+          color: forestgreen;
+          border: 1px solid;
+          padding: 5px 20px;
+          text-decoration: none;
+          border-radius: 8px;
+          margin-left: 10px;
+          transition: all 200ms ease-in-out;       
+      }
+
+      #my_profile:hover {
+      background-color: #1d7c1b;
+      color: white;
+      cursor: pointer;
+      }
+
+      #signin {
+          background-color: white;
+          color: forestgreen;
+          border: 1px solid;
+          padding: 5px 20px;
+          text-decoration: none;
+          border-radius: 8px;
+          margin-left: 10px;
+          transition: all 200ms ease-in-out;       
+      }
+
+      #signin:hover {
+      background-color: #1d7c1b;
+      color: white;
+      cursor: pointer;
+      }
+
+      #signout {
+          background-color: white;
+          color: forestgreen;
+          border: 1px solid;
+          padding: 5px 20px;
+          text-decoration: none;
+          border-radius: 8px;
+          margin-left: 10px;
+          transition: all 200ms ease-in-out;       
+      }
+
+      #signout:hover {
+      background-color: #1d7c1b;
+      color: white;
+      cursor: pointer;
+      }
+
     </style>
 </head>
 <body>
