--- a/NeighboursApp/Views/Listings/CreateListing.cshtml
+++ b/NeighboursApp/Views/Listings/CreateListing.cshtml
@@ -59,7 +59,13 @@
       border-radius: 8px;
       margin-left: 10px;
       padding: 5px 20px;
+      transition: all 200ms ease-in-out;       
+    }
 
+    #submit:hover {
+      background-color: #7cba00;
+      color: white;
+      cursor: pointer;
     }
   </style>
 </head>
