Results - emphasise lister name

--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -1,5 +1,11 @@
 <head>
   <style>
+    .lister_name {
+      color: #004010;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
     .listing {
       border: none;
       border-radius: 3px;
