--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -28,10 +28,10 @@
     }
 
     .people_planting {
-      left: 500px;
+      left: 528px;
       position: absolute;
-      top: 40px;
-      width: 65%;
+      top: 45px;
+      width: 700px;
     }
 
     .signup_container {
@@ -40,6 +40,7 @@
     }
 
     .signup_title {
+      color: #004010;
       margin-bottom: 20px;
     }
 
