--- a/NeighboursApp/Views/Listings/CreateListing.cshtml
+++ b/NeighboursApp/Views/Listings/CreateListing.cshtml
@@ -30,8 +30,8 @@
     .people_planting {
       left: 600px;
       position: absolute;
-      top: 200px;
-      width: 50%;
+      top: 240.5px;
+      width: 700px;
     }
 
     .create_listing_container{
@@ -40,7 +40,9 @@
     }
 
     .create_listing_title {
-      margin-bottom: 40px;
+      color: #004010;
+      font-size: 20px;
+      margin-bottom: 20px;
     }
 
     #slogan {
