--- a/NeighboursApp/Views/Listings/Search.cshtml
+++ b/NeighboursApp/Views/Listings/Search.cshtml
@@ -39,11 +39,12 @@
 
     .search_form_container {
       margin-left:0px;
-      margin-top:30px;
+      margin-top:20px;
     }
 
     .search_title {
       color: #004010;
+      font-size: 20px;
       margin-bottom: 20px;
     }
 
