Image - Home. Search. Create Listing.

--- a/NeighboursApp/Views/Listings/Search.cshtml
+++ b/NeighboursApp/Views/Listings/Search.cshtml
@@ -31,10 +31,10 @@
     }
 
     .people_planting {
-      top: 40px;
-      left: 500px;
+      left: 528px;
       position: absolute;
-      width: 65%;
+      top: 45px;
+      width: 700px;
     }
 
     .search_form_container {
