Add Profile Controller, and edit details route

--- a/NeighboursApp/Views/Profile/MyProfile.cshtml
+++ b/NeighboursApp/Views/Profile/MyProfile.cshtml
@@ -71,7 +71,9 @@
       <p>Email: @ViewBag.User.Email</p>
       <p>Contact number: @ViewBag.User.PhoneNumber</p>
       <p>Address: @ViewBag.User.Address</p>
+      <h6 class="edit_details_message"><a  href="/edit-details" id="edit-details" >Edit details</a></h6>
     </div>
+
     @* <p>@ViewBag.ListingsBool</p> *@
     @* @if(ViewBag.ListingsBool == "true") *@
 
