--- a/NeighboursApp/Views/Listings/CreateListing.cshtml
+++ b/NeighboursApp/Views/Listings/CreateListing.cshtml
@@ -1,6 +1,6 @@
 <head>
   @{
-      ViewData["Title"] = "Home Page";
+      ViewData["Title"] = "Create Listing Page";
   }
   <style>
 
@@ -46,12 +46,12 @@
     }
 
     #slogan {
-        color: forestgreen;
-        margin-top: 0;
-        border-bottom: 0.2px groove;
-        padding-top: 20px;
-        padding-bottom: 34px;
-        font-style: italic;
+      border-bottom: 0.2px groove;
+      color: forestgreen;
+      font-style: italic;
+      margin-top: 0;
+      padding-top: 20px;
+      padding-bottom: 34px;
     }
 
     #submit {
