--- a/NeighboursApp/Views/Listings/Results.cshtml
+++ b/NeighboursApp/Views/Listings/Results.cshtml
@@ -1,4 +1,7 @@
 <head>
+  @{
+      ViewData["Title"] = "Results Page";
+  }
   <style>
     .lister_name {
       color: #004010;
@@ -39,12 +42,12 @@
     }
 
     #slogan {
-    margin-top: 0;
-    color: forestgreen;
     border-bottom: 0.2px groove;
+    color: forestgreen;
+    font-style: italic;
+    margin-top: 0;
     padding-top: 20px;
     padding-bottom: 34px;
-    font-style: italic;
 }
 
   </style>
