--- a/NeighboursApp/Views/Profile/UserProfile.cshtml
+++ b/NeighboursApp/Views/Profile/UserProfile.cshtml
@@ -1,4 +1,7 @@
 <head>
+  @{
+      ViewData["Title"] = "User Profile Page";
+  }
   <style>
     h6 {
       color: #004010;
@@ -44,12 +47,12 @@
     } *@
 
     #slogan {
-    margin-top: 0;
-    color: forestgreen;
     border-bottom: 0.2px groove;
+    color: forestgreen;
+    font-style: italic;
+    margin-top: 0;
     padding-top: 20px;
     padding-bottom: 34px;
-    font-style: italic;
     }
   </style>
 </head>
