Added edit address route

--- a/NeighboursApp/Views/Profile/SelectAddress.cshtml
+++ b/NeighboursApp/Views/Profile/SelectAddress.cshtml
@@ -90,8 +90,8 @@
       <h5 class="edit_details_title">Edit Details</h5>
       <form class="edit_details_form" action="/edit-details/addresses" method="get">
         <div class="form_input_fields">
-          <label>Postcode</label>
-          <input type='text' size="22" id='postcode' name='postcode' placeholder='Enter your postcode'/><br><br>
+          <label>Phone Number</label>
+          <input type='text' size="22" id='phonenumber' name='phonenumber' placeholder='Enter your phone number'/><br><br>
         </div>
         <input type='submit' id='submit' value='Search for address'/>
       </form>
